--- a/linux-tbs-drivers/linux/drivers/media/dvb/frontends/Kconfig
+++ b/linux-tbs-drivers/linux/drivers/media/dvb/frontends/Kconfig
@@ -375,6 +375,13 @@ config DVB_TBS5220FE
 	help
 	  A DVB-T/T2/C tuner module. Say Y when you want to support this frontend.
 
+config DVB_TBS5520FE
+	tristate "TurboSight TBS5220FE based"
+	depends on DVB_CORE && I2C
+	default m if DVB_FE_CUSTOMISE
+	help
+	A DVB-S/S2/T/T2/C/ISDBT tuner module. Say Y when you want to support this frontend.
+
 config DVB_TBS6982FE
 	tristate "TurboSight TBS6982FE based"
 	depends on DVB_CORE && I2C
@@ -489,6 +496,13 @@ config DVB_TBS6904FE
 
 config DVB_TBS6908FE
 	tristate "TurboSight TBS6908FE based"
+	depends on DVB_CORE && I2C
+	default m if DVB_FE_CUSTOMISE
+	help
+	  A DVB-S/S2 tuner module. Say Y when you want to support this frontend.
+
+config DVB_TBS6909FE
+	tristate "TurboSight TBS6909FE based"
 	depends on DVB_CORE && I2C
 	default m if DVB_FE_CUSTOMISE
 	help
