--- a/linux-tbs-drivers/linux/drivers/media/dvb/frontends/Makefile
+++ b/linux-tbs-drivers/linux/drivers/media/dvb/frontends/Makefile
@@ -119,6 +119,8 @@ obj-$(CONFIG_DVB_TBS5881FE) += tbs5881fe.o
 tbs5881fe-objs += kmem_wrap.o tbs5881fe_driver.o
 obj-$(CONFIG_DVB_TBS5220FE) += tbs5220fe.o
 tbs5220fe-objs += kmem_wrap.o tbs5220fe_driver.o
+obj-$(CONFIG_DVB_TBS5520FE) += tbs5520fe.o
+tbs5520fe-objs += kmem_wrap.o tbs5520fe_driver.o
 obj-$(CONFIG_DVB_TBS6982FE) += tbs6982fe.o
 tbs6982fe-objs += kmem_wrap.o tbs6982fe_driver.o
 obj-$(CONFIG_DVB_TBS6982SE) += tbs6982se.o
@@ -165,6 +167,8 @@ obj-$(CONFIG_DVB_TBS6926CTRL) += tbs6926ctrl.o
 tbs6926ctrl-objs += kmem_wrap.o tbs6926ctrl_driver.o
 obj-$(CONFIG_DVB_TBS6923FE) += tbs6923fe.o
 tbs6923fe-objs += kmem_wrap.o tbs6923fe_driver.o
+obj-$(CONFIG_DVB_TBS6909FE) += tbs6909fe.o
+tbs6909fe-objs += kmem_wrap.o tbs6909fe_driver.o
 obj-$(CONFIG_DVB_SI21XX) += si21xx.o
 obj-$(CONFIG_DVB_STV0288) += stv0288.o
 obj-$(CONFIG_DVB_STB6000) += stb6000.o
